--- a/nav-app/package.json
+++ b/nav-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "attack-navigator",
-  "description": "Web app that provides basic navigation and annotation of ATT&CK matrices",
+  "description": "Web app that provides basic navigation and annotation of DISARM matrices",
   "repository": {
     "type": "git",
     "url": "https://github.com/mitre-attack/attack-navigator.git"
