--- a/nav-app/src/assets/config.json
+++ b/nav-app/src/assets/config.json
@@ -1,192 +1,13 @@
 {
     "versions": [
         {
-            "name": "ATT&CK v13",
-            "version": "13",
+            "name": "DISARM v1",
+            "version": "1",
             "domains": [
                 {   
-                    "name": "Enterprise",
-                    "identifier": "enterprise-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v13.1/enterprise-attack/enterprise-attack.json"]
-                },
-                {   
-                    "name": "Mobile",
-                    "identifier": "mobile-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v13.1/mobile-attack/mobile-attack.json"]
-                },
-                {
-                    "name": "ICS",
-                    "identifier": "ics-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v13.1/ics-attack/ics-attack.json"]
-                }
-            ]
-        },
-        {
-            "name": "ATT&CK v12",
-            "version": "12",
-            "domains": [
-                {   
-                    "name": "Enterprise",
-                    "identifier": "enterprise-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v12.1/enterprise-attack/enterprise-attack.json"]
-                },
-                {   
-                    "name": "Mobile",
-                    "identifier": "mobile-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v12.1/mobile-attack/mobile-attack.json"]
-                },
-                {
-                    "name": "ICS",
-                    "identifier": "ics-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v12.1/ics-attack/ics-attack.json"]
-                }
-            ]
-        },
-        {
-            "name": "ATT&CK v11",
-            "version": "11",
-            "domains": [
-                {   
-                    "name": "Enterprise",
-                    "identifier": "enterprise-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v11.3/enterprise-attack/enterprise-attack.json"]
-                },
-                {   
-                    "name": "Mobile",
-                    "identifier": "mobile-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v11.3/mobile-attack/mobile-attack.json"]
-                },
-                {
-                    "name": "ICS",
-                    "identifier": "ics-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v11.3/ics-attack/ics-attack.json"]
-                }
-            ]
-        },
-        {
-            "name": "ATT&CK v10", 
-            "version": "10",
-            "domains": [
-                {
-                    "name": "Enterprise",
-                    "identifier": "enterprise-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v10.1/enterprise-attack/enterprise-attack.json"]
-                },
-                {
-                    "name": "Mobile",
-                    "identifier": "mobile-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v10.1/mobile-attack/mobile-attack.json"]
-                },
-                {
-                    "name": "ICS",
-                    "identifier": "ics-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v10.1/ics-attack/ics-attack.json"]
-                }
-            ]
-        },
-        {
-            "name": "ATT&CK v9",
-            "version": "9",
-            "domains": [
-                {
-                    "name": "Enterprise",
-                    "identifier": "enterprise-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v9.0/enterprise-attack/enterprise-attack.json"]
-                },
-                {
-                    "name": "Mobile",
-                    "identifier": "mobile-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v9.0/mobile-attack/mobile-attack.json"]
-                },
-                {
-                    "name": "ICS",
-                    "identifier": "ics-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v9.0/ics-attack/ics-attack.json"]
-                }
-            ]
-        },
-        {
-            "name": "ATT&CK v8",
-            "version": "8",
-            "domains": [
-                {
-                    "name": "Enterprise",
-                    "identifier": "enterprise-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v8.2/enterprise-attack/enterprise-attack.json"]
-                },
-                {
-                    "name": "Mobile",
-                    "identifier": "mobile-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v8.2/mobile-attack/mobile-attack.json"]
-                },
-                {
-                    "name": "ICS",
-                    "identifier": "ics-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v8.2/ics-attack/ics-attack.json"]
-                }
-            ]
-        },
-        {
-            "name": "ATT&CK v7",
-            "version": "7",
-            "domains": [
-                {
-                    "name": "Enterprise",
-                    "identifier": "enterprise-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v7.2/enterprise-attack/enterprise-attack.json"]
-                },
-                {
-                    "name": "Mobile",
-                    "identifier": "mobile-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v7.2/mobile-attack/mobile-attack.json"]
-                }
-            ]
-        },
-        {
-            "name": "ATT&CK v6",
-            "version": "6",
-            "domains": [
-                {
-                    "name": "Enterprise",
-                    "identifier": "enterprise-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v6.3/enterprise-attack/enterprise-attack.json"]
-                },
-                {
-                    "name": "Mobile",
-                    "identifier": "mobile-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v6.3/mobile-attack/mobile-attack.json"]
-                }
-            ]
-        },
-        {
-            "name": "ATT&CK v5",
-            "version": "5",
-            "domains": [
-                {
-                    "name": "Enterprise",
-                    "identifier": "enterprise-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v5.2/enterprise-attack/enterprise-attack.json"]
-                },
-                {
-                    "name": "Mobile",
-                    "identifier": "mobile-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v5.2/mobile-attack/mobile-attack.json"]
-                }
-            ]
-        },
-        {
-            "name": "ATT&CK v4",
-            "version": "4",
-            "domains": [
-                {
-                    "name": "Enterprise",
-                    "identifier": "enterprise-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v4.0/enterprise-attack/enterprise-attack.json"]
-                },
-                {
-                    "name": "Mobile",
-                    "identifier": "mobile-attack",
-                    "data": ["https://raw.githubusercontent.com/mitre/cti/ATT%26CK-v4.0/mobile-attack/mobile-attack.json"]
+                    "name": "DISARM",
+                    "identifier": "DISARM",
+                    "data": ["assets/DISARM.json"]
                 }
             ]
         }
@@ -210,7 +31,7 @@
         {"name": "leave_site_dialog", "enabled": true, "description": "Disable to remove the dialog prompt when leaving site."},
         {"name": "tabs", "enabled": true, "description": "Disable to remove the ability to open new tabs."},
         {"name": "selecting_techniques", "enabled": true, "description": "Disable to remove the ability to select techniques."},
-        {"name": "header", "enabled": true, "description": "Disable to remove the header containing 'MITRE ATT&CK Navigator' and the link to the help page. The help page can still be accessed from the new tab menu."},
+        {"name": "header", "enabled": true, "description": "Disable to remove the header containing 'DISARM Navigator' and the link to the help page. The help page can still be accessed from the new tab menu."},
         {"name": "subtechniques", "enabled": true, "description": "Disable to remove all sub-technique features from the interface."},
         {"name": "selection_controls", "enabled": true, "description": "Disable to to disable all subfeatures", "subfeatures": [
             {"name": "search", "enabled": true, "description": "Disable to remove the technique search panel from the interface."},
@@ -222,7 +43,7 @@
             {"name": "download_layer", "enabled": true, "description": "Disable to remove the button to download the layer."},
             {"name": "export_render", "enabled": true, "description": "Disable to remove the button to render the current layer."},
             {"name": "export_excel", "enabled": true, "description": "Disable to remove the button to export the current layer to MS Excel (.xlsx) format."},
-            {"name": "filters", "enabled": true, "description": "Disable to remove the filters panel from interface."},
+            {"name": "filters", "enabled": false, "description": "Disable to remove the filters panel from interface."},
             {"name": "sorting", "enabled": true, "description": "Disable to remove the sorting button from the interface."},
             {"name": "color_setup", "enabled": true, "description": "Disable to remove the color setup panel from interface, containing customization controls for scoring gradient and tactic row color."},
             {"name": "toggle_hide_disabled", "enabled": true, "description": "Disable to remove the hide disabled techniques button from the interface."},
