Uploaded Adam's master Excel file fo3 DISARM 2.0 Observations

--- a/docs/assets/config.json
+++ b/docs/assets/config.json
@@ -5,7 +5,7 @@
             "version": "1",
             "domains": [
                 {   
-                    "name": "DISARM V2 Observable",
+                    "name": "DISARM V2 Observations",
                     "identifier": "DISARM",
                     "data": ["assets/DISARM.json"]
                 }
